<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header_string">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title_string"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title_string"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header_string">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title_string" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off_string"
            app:summaryOn="@string/attachment_summary_on_string"
            app:title="@string/attachment_title_string" />

    </PreferenceCategory>

</PreferenceScreen>