<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_1"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibration_string"
        android:textColor="@color/yellow"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/promptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/yellow"
        android:text="@string/put_phone_string" />

    <ImageView
        android:id="@+id/phonePositionImageView"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/black_on_back_icon"/>

    <Button
        android:id="@+id/nastepnyPomiarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_stage_string"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:background="@drawable/yellow_button_bg_shape"/>

    <TextView
        android:id="@+id/driftyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="20sp" />

</LinearLayout>
