<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/quest"
        android:layout_width="336dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        app:cardCornerRadius="40dp">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/wroc_not_started_bg"
            android:backgroundTint="#BFFFFFFF"
            android:backgroundTintMode="src_over"
            android:gravity="center" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/locked_string"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_text" />

        <TextView
            android:id="@+id/objectsCountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="110dp"
            android:text="@string/number_of_objects_string"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/objectsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginStart="180dp"
            android:layout_marginTop="110dp"
            android:layout_toEndOf="@id/objectsCountName"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/difficultyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/objectsCountName"
            android:layout_marginStart="16dp"
            android:layout_marginTop="140dp"
            android:text="@string/poziom_trudnosci"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/objectsCount"
            android:layout_marginStart="180dp"
            android:layout_marginTop="140dp"
            android:layout_toEndOf="@id/difficultyText"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/authorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/difficultyText"
            android:layout_marginStart="16dp"
            android:layout_marginTop="170dp"
            android:text="@string/autor"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/difficulty"
            android:layout_marginStart="180dp"
            android:layout_marginTop="170dp"
            android:layout_toEndOf="@id/authorText"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>



    <!--        <wro.per.others.RoundedCornerView-->
<!--            android:id="@+id/quest"-->
<!--            android:layout_width="336dp"-->
<!--            android:layout_height="156dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.493"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.0" />-->

        <!--        <View-->
<!--            android:id="@+id/quest"-->
<!--            android:layout_width="336dp"-->
<!--            android:layout_height="156dp"-->
<!--            android:background="@drawable/wroc_not_started_bg"-->

<!--            android:backgroundTint="#80FFFFFF"-->
<!--            android:backgroundTintMode="src_over"-->
<!--            android:outlineProvider="background"-->
<!--            android:padding="8dp"-->
<!--            android:shape="rectangle"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.493"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.0" />-->

