<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/doneList"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/tabItem2"
        tools:ignore="NotSibling" />

    <RelativeLayout
        android:id="@+id/menuBar"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_gravity="top"
        android:animateLayoutChanges="false">

        <View
            android:id="@+id/redMenuView"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:background="@drawable/red_1_menu_bg_shape" />

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@id/listButton"
            android:background="@drawable/yellow_icon_bg_shape"
            android:contentDescription="Profile"
            android:scaleType="centerInside"
            android:src="@drawable/black_profile_icon"
            tools:src="@drawable/black_profile_icon" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/yellow_home_icon_bg_shape"
            android:contentDescription="Home"
            android:src="@drawable/black_home_icon"
            android:visibility="visible"
            tools:src="@drawable/black_home_icon" />

        <ImageButton
            android:id="@+id/listButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@id/homeButton"
            android:background="@drawable/yellow_icon_bg_shape"
            android:contentDescription="List"
            android:src="@drawable/black_list_icon"
            tools:src="@drawable/black_list_icon" />

        <ImageButton
            android:id="@+id/favouriteButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="32dp"
            android:layout_toEndOf="@id/homeButton"
            android:background="@drawable/yellow_icon_bg_shape"
            android:contentDescription="Favourite"
            android:src="@drawable/black_star_icon"
            app:srcCompat="@drawable/black_star_icon"
            tools:src="@drawable/black_star_icon" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="32dp"
            android:layout_toEndOf="@id/favouriteButton"
            android:background="@drawable/yellow_icon_bg_shape"
            android:contentDescription="Settings"
            android:src="@drawable/black_settings_icon"
            app:srcCompat="@drawable/black_settings_icon"
            tools:src="@drawable/black_settings_icon" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menuBar">

        <View
            android:id="@+id/t_o_lista_zadagek"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="@drawable/red_2_rectangle_shape"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/ikona_lista_zagadek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:contentDescription="ikona_lista_zagadek"
            android:src="@drawable/yellow_list_icon"
            app:layout_constraintEnd_toStartOf="@+id/lista_zagadek"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="10dp"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:tabTextColor="@color/black"
            tools:ignore="MissingConstraints">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rozwiązaneddd" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nierozwiązane" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/t_o_lista_zadagek">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/lista_zagadek"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:text="@string/riddle_list_string"
            android:textColor="@color/yellow"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/t_o_lista_zadagek" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/doneList"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_below="@id/listLayout"
        android:background="@drawable/red_4_rectangle_shape">


        <Button
            android:id="@+id/hardButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/yellow_button_bg_shape"
            android:text="@string/hard_string"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/mediumButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mediumButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/yellow_button_bg_shape"
            android:text="@string/medium_string"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/easyButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/yellow_button_bg_shape"
            android:text="@string/easy_string"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/mediumButton"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>